tests/test-dirs/upstream-typing-recovery/original-tests/not_subtype_nonrec.compilers.reference
File "not_subtype_nonrec.ml", line 14, characters 8-35:
14 | let f = (g: u -> unit :> v -> unit)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Type u -> unit is not a subtype of v -> unit
       Type v = v0 -> unit is not a subtype of u = u0 -> unit
       Type u0 = int * int -> unit is not a subtype of
         v0 = float * float -> unit
       Type float is not a subtype of int
